kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: cmangamm/go-react-crud-cicd-backend:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            port: 8000
            path: /ready
          initialDelaySeconds: 5
          periodSeconds: 5
        #livenessProbe:
        #  httpGet:
        #    port: 8000
        #    path: /health
        #  initialDelaySeconds: 5
        #  periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
        - name: my-pv-storage
          mountPath: /app/data
      volumes:
      - name: my-pv-storage
        persistentVolumeClaim:
          claimName: my-pvc
